--- a/TiendaFrontInventario/Layout/NavMenu.razor
+++ b/TiendaFrontInventario/Layout/NavMenu.razor
@@ -39,6 +39,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Products
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Check-in">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Facturacion
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
