--- a/TiendaFrontInventario/Pages/Products.razor
+++ b/TiendaFrontInventario/Pages/Products.razor
@@ -14,7 +14,7 @@
             <p>
                 Search all the Produts in the System:
             </p>
-            <button class="button" @onclick="GetAllProducts">Search me</button>
+            <button @onclick="GetAllProducts">Search me</button>
 
             @if(listap!=null)
             {
